--- a/index.html
+++ b/index.html
@@ -6,18 +6,7 @@
         </head>
         <body>
         <h1>DO U LOVE ME??</h1>
-            <script>
-                function move()
-    {
-    var x = Math.random()*100
-    var y = Math.random()*250
-    var left=x+'px'
-    var top=y+'px'
-    var modal=document.getElementById("I LOVE YOU TOOO<33")
-    document.getElementById('btn').style.left=left
-    document.getElementById('btn').style.top=top
-    }
-            </script>
+            <script src="javascript.js"></script>
             <div id="btn" style="background-color:orange;position:absolute; left: 60px; top: 50px;"> 
     <input id ="ipu" type="button" value="NOOOO " style="cursor:pointer;" onMouseMove="move();bep(); btn.onclick = pop()" >
     </div>
